# vrc-log-backup-photo-rename

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  TASK_git_split_reposV2.md  Untitled  create_sc.ps1  create_shortcuts.ps1  exe_strings.txt  filtered_strings.txt  funcs.txt  funcs2.txt  make_sc.js  merge.txt  package-lock.json  package.json  rust-toolchain.toml  write_japanese_nsh.js  メモ
.agents/: rules.md
.agents/rules/: Agents.md  coding-standard.md  general.md  skill-creation-guidance.md
.agents/skills/: Template.html  flash-analyzer.md  test-checklist.md
.agents/workflows/: build-stella-record.md  buildRule.md  create-skill.md  logcheck.md  stella-record-migration.md
AITools/: README.md
AITools/docs/: codex_現課題01.md
Alpheratz/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Alpheratz/src-tauri/: Cargo.toml  tauri.conf.json
Alpheratz/src-tauri/capabilities/: default.json
Alpheratz/src-tauri/icons/: icon.icns
Alpheratz/src-tauri/migrations/: V1__initial_schema.sql
Alpheratz/src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  orientation.rs  phash.rs  scanner.rs  stella_record_ext.rs  stellarecord_ext.rs  utils.rs
Alpheratz/src-tauri/windows/: hooks.nsi  installer.nsi
LogBackupTool/: Cargo.toml
LogBackupTool/cas_lbtsetting/src-tauri/: Cargo.toml  tauri.conf.json
LogBackupTool/cas_lbtsetting/src-tauri/src/: backup_tool.rs  config.rs  lib.rs  main.rs
LogBackupTool/lbt_app_observer/: Cargo.toml
LogBackupTool/lbt_app_observer/src/: main.rs
LogBackupTool/lbt_core/: Cargo.toml
LogBackupTool/lbt_core/src/: config.rs  logger.rs
LogBackupTool/onsite_log_backup_tool/: Cargo.toml
LogBackupTool/onsite_log_backup_tool/src/: main.rs
Polaris/: README.md
Polaris/src-tauri/: Cargo.toml  tauri.conf.json
Polaris/src-tauri/icons/: icon.icns
Polaris/src-tauri/src/: bootstrap.rs  main.rs  platform.rs  sync.rs  tray.rs  utils.rs
Polaris/src-tauri/windows/: hooks.nsi  installer.nsi
StellaRecord/: Cargo.toml  README.md  README_STELLARECORD.html  package-lock.json  package.json
StellaRecord/Polaris/src-tauri/: Cargo.toml  tauri.conf.json
StellaRecord/Polaris/src-tauri/icons/: icon.icns
StellaRecord/Polaris/src-tauri/src/: main.rs
StellaRecord/Polaris/src-tauri/windows/: hooks.nsi  installer.nsi
StellaRecord/planetarium/: Cargo.toml  vrc_history.sqlite3
StellaRecord/planetarium/src/: archive.rs  config.rs  db.rs  main.rs  parser.rs
StellaRecord/pleiades_alpheratz/: dev-alpheratz.bat  index.html  package.json
StellaRecord/pleiades_alpheratz/src/: App.css  App.tsx  index.css  main.tsx
StellaRecord/pleiades_alpheratz/src-tauri/: Cargo.toml  tauri.conf.json
StellaRecord/pleiades_alpheratz/src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  scanner.rs  stellarecord_ext.rs  utils.rs
StellaRecord/pleiades_alpheratz/src-tauri/windows/: Japanese.nsh  hooks.nsi
StellaRecord/pleiades_alpheratz/src/components/: ActionCards.tsx  CustomScrollbar.tsx  EmptyState.tsx  Header.tsx  Icons.tsx  MonthNav.tsx  PhotoCard.tsx  PhotoGrid.tsx  PhotoModal.tsx  ScanningOverlay.tsx  SettingsModal.tsx
StellaRecord/pleiades_alpheratz/src/hooks/: usePhotoActions.ts  usePhotos.ts  useScan.ts  useToasts.ts
StellaRecord/pleiades_alpheratz/src/types/: index.ts
StellaRecord/polaris/: Cargo.toml
StellaRecord/polaris/src/: config.rs  logger.rs  main.rs
StellaRecord/src/: App.css  App.tsx  index.css
StellaRecord/src-tauri/: Cargo.toml  err.txt  tauri.conf.json
StellaRecord/src-tauri/icons/: icon.icns
StellaRecord/src-tauri/src/: commands.rs  config.rs  lib.rs  models.rs  platform.rs
StellaRecord/src-tauri/src/analyze/: db.rs  mod.rs  parser.rs
StellaRecord/src-tauri/windows/: hooks.nsi  installer.nsi
StellaRecord/src/components/: Icons.tsx
StellaRecord/src/hooks/: useAnalyzeState.ts  useDashboardState.ts
StellaRecord/src/types/: index.ts
StellaRecord/stella_record_ui/: index.html  lint_output_final.txt  package.json
StellaRecord/stella_record_ui/src/: App.css  App.tsx
StellaRecord/stella_record_ui/src-tauri/: Cargo.toml  tauri.conf.json
StellaRecord/stella_record_ui/src-tauri/icons/: icon.icns
StellaRecord/stella_record_ui/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  platform.rs  utils.rs
StellaRecord/stella_record_ui/src-tauri/src/analyze/: mod.rs  parser.rs
StellaRecord/stella_record_ui/src-tauri/src/planetarium/: db.rs  mod.rs  parser.rs
StellaRecord/stella_record_ui/src-tauri/windows/: hooks.nsi  installer.nsi
StellaRecord/stella_record_ui/src/hooks/: useArchiveSelection.ts  useDashboardState.ts  useToasts.ts
StellaRecord/stella_record_ui/src/types/: index.ts
StellaRecord/tasks/: check_encoding.py  lessons.md  test_png.rs  test_png_manual.rs  todo.md
UserTools/: README.md  registry.json
app/: package-lock.json  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src-tauri/windows/: hooks.nsi
desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-plugin-exclude-debug.ts  vite.config.ts
docs/: output_log_2026-02-21_23-14-36.txt  仕様書.md
public/: Alpheratz_src-tauri_bundle.md  Alpheratz_src_bundle.md  Alpheratzシステム仕様詳解.md  Alpheratz内部設計書.md  STELLARECORD_全仕様ロジック設計書.md  STELLA_RECORD_統合仕様書.docx  STELLA_RECORD_統合仕様書.md  STELLA_RECORD_詳細設計書.docx  StellaRecord_architecture_plan.md  StellaRecord_build_hints.md  UserDescription-Planetarium.html  UserDescription-Polaris.html  UserDescription-StellaRecord.html  alpheratz_internal_design.md  alpheratz_internal_design.md.resolved  db変更メモ_現課題2.md  detailed design document sample.md  output_log_2026-03-01_01-10-44.txt  tmp_design_extracted.md  めも.txt  ｆｓ
scripts/: backup_vrc_logs.ps1  generate-test-csv.py  rename_gui.ps1  rename_vrc_photos.ps1  setup-cosmoarts-store.ps1
tasks/: lessons.md  todo.md
tmp/: analyze_vrc_png.py  check_encoding.ps1  check_encoding_v2.ps1  check_encoding_v3.ps1  debug_out.txt  encoding_report.csv
(+677 files in other folders)
