[workspace]
resolver = "2"
members = [
    "cas_lbtsetting/src-tauri",
    "onsite_log_backup_tool",
    "lbt_app_observer",
    "lbt_core"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "synchapi", "sysinfoapi", "reason", "handleapi", "winerror"] }
chrono = "0.4"
sysinfo = "0.33.0"
tray-icon = "0.19.2"
tao = "0.30"
tauri = { version = "2.2.4", features = [] }
tauri-build = { version = "2.0.5", features = [] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
lbt_core = { path = "lbt_core" }
