[workspace]
resolver = "2"
members = [
    "stella_record_ui/src-tauri",
    "Polaris/src-tauri",
    "planetarium",
    "pleiades_alpheratz/src-tauri"
]

[workspace.dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
chrono        = { version = "0.4", features = ["serde"] }
rusqlite      = { version = "0.38", features = ["bundled"] }
regex         = "1"
tauri         = { version = "2.2.4", features = [] }
tauri-build   = { version = "2.0.5", features = [] }
tauri-plugin-fs     = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell  = "2.2.0"
winapi        = { version = "0.3.9", features = ["winuser", "synchapi", "sysinfoapi", "reason", "handleapi", "winerror", "winbase"] }
sysinfo       = "0.33.0"
tray-icon     = "0.19.2"
tao           = "0.30"
image         = "0.25"
