[workspace]
resolver = "2"
members = [
    "src-tauri"
]

[workspace.dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
chrono        = { version = "0.4", features = ["serde"] }
rusqlite      = { version = "0.38", features = ["bundled"] }
regex         = "1"
tauri         = { version = "2.2.4", features = [] }
tauri-build   = { version = "2.0.5", features = [] }
tauri-plugin-fs     = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell  = "2.2.0"
windows       = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
sysinfo       = "0.33.0"
tray-icon     = "0.19.2"
tao           = "0.30"
image         = "0.25"
opener        = "0.7"
