[package]
name = "onsite_log_backup_tool"
version = "1.0.0"
edition = "2021"

[dependencies]
lbt_core = { path = "../lbt_core" }
sysinfo = "0.33.0"
winapi = { version = "0.3.9", features = ["winuser", "synchapi", "sysinfoapi", "reason", "handleapi", "winerror", "winbase"] }
tray-icon = "0.19.2"
tao = "0.30"
