[package]
name = "polaris"
version = "1.0.0"
description = "Polaris Background Monitor"
authors = ["CosmoArtsStore"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = [] }
sysinfo = "0.33.0"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
    "Win32_System_Diagnostics_ToolHelp"
] }
chrono = "0.4.44"
tray-icon = "0.19.2"
image = "0.25"
