[package]
name = "planetarium"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19"
winapi = { workspace = true }
tar = "0.4.44"
zstd = "0.13.3"
