[package]
name = "Polaris"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
winapi = { workspace = true }
tray-icon = { workspace = true }
tao = { workspace = true }
image = { workspace = true, features = ["png"] }
zip = "8.1.0"
walkdir = "2.5.0"
