[package]
name = "stella_record_ui"
version = "1.0.0"
description = "STELLA RECORD Settings UI"
authors = ["CosmoArtsStore"]
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
rusqlite = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = "1.19"
tar = "0.4"
zstd = "0.13"
winreg = "0.52"
opener = { workspace = true }
