[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "PhotoReNameApp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PhotoReNameApp"
path = "src/main.rs"

[[bin]]
name = "LogBackUpTool"
path = "src/backup_tool.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
resident = []

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.3"
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
sysinfo = "0.33.0"
tar = "0.4.44"
flate2 = "1.1.9"
