[package]
name = "cas_lbtsetting"
version = "1.0.0"
description = "LogBackupTool Settings GUI"
authors = ["CosmoArtsStore"]
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
lbt_core = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winapi = { workspace = true }
