[package]
name = "alpheratz"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

[lib]
name = "alpheratz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["protocol-asset"] }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
sysinfo = { workspace = true }
rusqlite.workspace = true
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
image = "0.25.9"
tokio = "1.49.0"
