[package]
name = "stella_record_ui"
version = "1.0.0"
description = "STELLA RECORD Settings UI"
authors = ["CosmoArtsStore"]
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winapi = { workspace = true }
